// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Height handles % value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--uic-h-s": "50%",
  },
}
`;

exports[`Styles/Height handles px value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--uic-h-s": "50px",
  },
}
`;

exports[`Styles/Height handles responsive value 1`] = `
{
  "classNames": [
    "literal",
    "literal--l",
  ],
  "variables": {
    "--uic-h-l": "50%",
    "--uic-h-s": "50px",
  },
}
`;

exports[`Styles/Height handles undefined value 1`] = `null`;

exports[`Styles/Height handles unit value 1`] = `
{
  "classNames": [
    "unit",
  ],
  "variables": {
    "--uic-h-s": 5,
  },
}
`;
